--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,25 @@ h3 {
 h2,
 h3 {
   color: #2e2f42;
+  letter-spacing: 0.02em;
 }
-p {
+.team-title,
+.portfolio-title,
+.features-title {
+  line-height: 1.2;
+  font-size: 20px;
+  text-transform: capitalize;
+  text-align: center;
+}
+.features-subtitle,
+.team-name,
+.portfolio-name {
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.portfolio-category, .team-role, .features-description {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -52,7 +69,7 @@ header .logo span {
   line-height: 1.07;
   letter-spacing: 0.02em;
 }
-.hero-btn {
+.hero-button {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
