--- a/css/style.css
+++ b/css/style.css
@@ -6,36 +6,26 @@ body {
 h1 {
   font-size: 56px;
 }
-header nav ul li,
-h3 {
-  font-weight: 500;
-}
 h2,
 h3 {
   color: #2e2f42;
   letter-spacing: 0.02em;
 }
-.team-title,
-.portfolio-title,
-.features-title {
-  line-height: 1.2;
-  font-size: 20px;
-  text-transform: capitalize;
-  text-align: center;
-}
-.features-subtitle,
-.team-name,
-.portfolio-name {
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.portfolio-category, .team-role, .features-description {
-  font-size: 16px;
-  font-weight: 400;
+.nav-item{
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.nav-item:hover, .nav-item:focus {
+  color: #404bbf;
+}
+.contact{
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.contact:hover, .contact:focus {
+  color: #404bbf;
 }
 a {
   text-decoration: none;
@@ -43,8 +33,6 @@ a {
 }
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -78,17 +66,44 @@ header .logo span {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: 16px 32px;
+  cursor: pointer;
 }
-.hero-btn:hover,
-.hero-btn:focus {
+.hero-button:hover,
+.hero-button:focus {
   background-color: #404bbf;
 }
-button {
-  cursor: pointer;
+
+.team-title,
+.portfolio-title,
+.features-title {
+  line-height: 1.11;
+  font-size: 32px;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+}
+.features-subtitle,
+.team-name,
+.portfolio-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.portfolio-category,
+.team-role,
+.features-description {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .team {
   background-color: #f4f4fd;
+}
+.team-item{
+    background-color:#FFFFFF ;
 }
 .footer {
   background-color: #2e2f42;
