--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,12 @@ img {
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
+  padding: 24px 0;
 }
 .header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 15px;
 }
 .nav {
   display: flex;
@@ -61,9 +61,11 @@ img {
 .nav-list,
 .contact-list {
   display: flex;
-  padding: 24px 0;
   gap: 40px;
   margin: 0;
+}
+.nav-item {
+  padding: 0 15px;
 }
 .nav-link:hover,
 .nav-link:focus {
