--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,15 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/* HEADER */
+
+/* #region header */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
 }
 .header .container {
   display: flex;
@@ -100,9 +106,22 @@ img {
 .logo--header .span-logo {
   color: #2e2f42;
 }
-/* MAIN SECTION */
+/* #endregion header*/
+
+/* #region main */
+/* #region hero */
 .hero {
+  margin-top: 72px;
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   color: #ffffff;
   padding: 188px 0;
 }
@@ -131,11 +150,13 @@ img {
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
 }
+/* #endregion */
 .team-title,
 .portfolio-title,
 .features-title {
@@ -183,6 +204,9 @@ img {
 }
 .team-item {
   background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .team-list {
   display: flex;
@@ -205,13 +229,18 @@ img {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  cursor: pointer;
 }
 .portfolio-item-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-/* FOOTER */
+/* #endregion */
+
+/* #region footer */
 .footer {
   background-color: #2e2f42;
   color: #f4f4fd;
@@ -229,3 +258,4 @@ img {
   letter-spacing: 0.02em;
   width: 264px;
 }
+/* #endregion */
