--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,22 @@ img {
   color: #2e2f42;
   font-weight: 500;
 }
+.nav-item {
+  padding: 24px 0;
+  /* для підкреслення поточного пункту меню */
+  position: relative;
+  display: inline-block; /* Забезпечує коректне відображення ::after */
+}
+.nav-link.current::after {
+  content: ""; /* Порожній вміст для псевдоелемента */
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
@@ -258,6 +274,8 @@ img {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+}
+.portfolio-item:hover {
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
   cursor: pointer;
@@ -290,7 +308,7 @@ img {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item-img:hover .overlay {
   transform: translateY(0);
