--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ img {
   left: 0;
   width: 100%;
   background-color: #ffffff;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .container {
   display: flex;
@@ -74,6 +76,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   font-weight: 500;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-item {
   padding: 24px 0;
@@ -81,11 +84,14 @@ img {
   position: relative;
   display: inline-block; /* Забезпечує коректне відображення ::after */
 }
+.nav-link.current {
+  color: #404bbf;
+}
 .nav-link.current::after {
   content: ""; /* Порожній вміст для псевдоелемента */
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   height: 4px;
   background-color: #404bbf;
@@ -105,6 +111,7 @@ img {
 }
 .contact-link {
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover,
 .contact-link:focus {
@@ -127,6 +134,7 @@ img {
 /* #region main */
 /* #region hero */
 .hero {
+  max-width: 1440px;
   margin-top: 72px;
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -167,6 +175,7 @@ img {
   min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -215,13 +224,17 @@ img {
 .team-item {
   width: calc((100% - 3 * 24px) / 4);
 }
-.features-icon {
+.features-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 264px;
   height: 112px;
-  padding: 24px 100px;
-  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
   border-radius: 4px;
   margin-bottom: 8px;
+  padding: 24px 100px;
+  border: 1px solid #8e8f99;
 }
 .team {
   background-color: #f4f4fd;
@@ -242,12 +255,7 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 .team-item-content {
-  padding: 32px 16px;
-}
-.socials-icon {
-  width: 16px;
-  height: 16px;
-  fill: #ffffff;
+  padding: 32px 0;
 }
 .socials-list {
   display: flex;
@@ -259,11 +267,20 @@ img {
   width: 40px;
   height: 40px;
   cursor: pointer;
-  background-color: #4d5ae5;
-  border-radius: 100%;
+  border-radius: 50%;
   padding: 12px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials-link:hover {
+  background-color: #4d5ae5;
+}
+.socials-icon {
+  width: 16px;
+  height: 16px;
+  fill: #ffffff;
 }
 .portfolio-list {
   display: flex;
@@ -274,7 +291,7 @@ img {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover {
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
@@ -286,32 +303,26 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.portfolio-subtitle {
-  /* display: none; */
-  padding: 40px 32px 0 32px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-}
 .portfolio-item-img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-item-img .overlay {
-  padding: 40px 32px 0 32px;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  font-weight: 400;
+.portfolio-subtitle {
   position: absolute;
-  letter-spacing: 0.02em;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 40px 32px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item-img:hover .overlay {
+.portfolio-subtitle:hover {
   transform: translateY(0);
 }
 /* #endregion */
@@ -325,8 +336,10 @@ img {
 
 .footer .container {
   display: flex;
-  align-items: center;
-  gap: 120px;
+  align-items: baseline;
+}
+.footer-content {
+  margin-right: 120px;
 }
 .logo--footer {
   display: inline-block;
@@ -339,16 +352,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   width: 264px;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
 .socials-footer {
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-.socials-icon-footer {
-  width: 24px;
-  height: 24px;
-  fill: #ffffff;
 }
 .socials-footer-title {
   letter-spacing: 0.02em;
@@ -357,17 +367,28 @@ img {
 }
 .socials-list-footer {
   display: flex;
-  gap: 24px;
   justify-content: center;
+  gap: 16px;
 }
 .socials-link-footer {
   width: 40px;
   height: 40px;
   cursor: pointer;
   background-color: #4d5ae5;
-  border-radius: 100%;
+  border-radius: 50%;
   padding: 8px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials-link-footer:hover,
+.socials-link-footer:focus {
+  background-color: #31d0aa;
+}
+.socials-icon-footer {
+  width: 24px;
+  height: 24px;
+  fill: #ffffff;
 }
 /* #endregion */
