--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,11 @@ img {
 
 /* #region header */
 .header {
-  border-bottom: 1px solid #e7e9fc;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  border-bottom: 1px solid #e7e9fc;
   background-color: #ffffff;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -118,6 +118,7 @@ img {
   color: #404bbf;
 }
 .logo {
+  position: relative;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   line-height: 1.17;
@@ -134,20 +135,19 @@ img {
 /* #region main */
 /* #region hero */
 .hero {
-  max-width: 1440px;
   margin-top: 72px;
-  background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero.png);
+    url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   color: #ffffff;
   padding: 188px 0;
+  max-width: 1440px;
 }
 .hero .container {
   display: flex;
@@ -272,15 +272,15 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.socials-link:hover {
-  background-color: #4d5ae5;
+.socials-link:hover,
+.socials-link:focus {
+  background-color: #404bbf;
 }
 .socials-icon {
-  width: 16px;
-  height: 16px;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 .portfolio-list {
   display: flex;
@@ -330,7 +330,6 @@ img {
 /* #region footer */
 .footer {
   background-color: #2e2f42;
-  color: #f4f4fd;
   padding: 100px 0;
 }
 
@@ -361,6 +360,7 @@ img {
   gap: 16px;
 }
 .socials-footer-title {
+  color: #ffffff;
   letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 24px;
@@ -387,8 +387,6 @@ img {
   background-color: #31d0aa;
 }
 .socials-icon-footer {
-  width: 24px;
-  height: 24px;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 /* #endregion */
