--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ img {
   justify-content: space-between;
   align-items: center;
 }
+
 .nav {
   display: flex;
   align-items: center;
@@ -76,26 +77,27 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   font-weight: 500;
+  position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-item {
-  padding: 24px 0;
-  /* для підкреслення поточного пункту меню */
-  position: relative;
-  display: inline-block; /* Забезпечує коректне відображення ::after */
-}
-.nav-link.current {
-  color: #404bbf;
-}
-.nav-link.current::after {
-  content: ""; /* Порожній вміст для псевдоелемента */
+.nav-link::after {
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
-  width: 100%;
+  width: 0;
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
+  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-link.current::after,
+.nav-link:hover::after,
+.nav-link:focus::after {
+  width: 100%;
+}
+.nav-link.current {
+  color: #404bbf;
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -104,6 +106,7 @@ img {
 .nav-item {
   padding: 24px 0;
 }
+
 .contact {
   font-style: normal;
   line-height: 1.5;
@@ -307,6 +310,21 @@ img {
   position: relative;
   overflow: hidden;
 }
+.portfolio-item:hover .portfolio-subtitle {
+  transform: translateY(0%);
+}
+
+.portfolio-item-content {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio-item-img {
+  position: relative;
+  overflow: hidden;
+}
+
 .portfolio-subtitle {
   position: absolute;
   top: 0;
@@ -314,16 +332,14 @@ img {
   width: 100%;
   height: 100%;
   padding: 40px 32px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #4d5ae5;
   color: #f4f4fd;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-subtitle:hover {
-  transform: translateY(0);
 }
 /* #endregion */
 
