--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,8 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   font-weight: 500;
+  padding: 24px 0;
+  display: block;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -102,9 +104,6 @@ img {
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
-}
-.nav-item {
-  padding: 24px 0;
 }
 
 .contact {
@@ -151,6 +150,7 @@ img {
   color: #ffffff;
   padding: 188px 0;
   max-width: 1440px;
+  margin: 0 auto;
 }
 .hero .container {
   display: flex;
@@ -368,12 +368,6 @@ img {
   letter-spacing: 0.02em;
   width: 264px;
   color: #ffffff;
-  margin-bottom: 16px;
-}
-.socials-footer {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
 }
 .socials-footer-title {
   color: #ffffff;
@@ -393,7 +387,6 @@ img {
   cursor: pointer;
   background-color: #4d5ae5;
   border-radius: 50%;
-  padding: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
