--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,23 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.primary-btn {
+  background-color: #4d5ae5;
+  border: none;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.primary-btn:hover,
+.primary-btn:focus {
+  background-color: #404bbf;
+}
 
 /* #region header */
 .header {
@@ -165,24 +182,9 @@ img {
   max-width: 496px;
 }
 .hero-button {
-  background-color: #4d5ae5;
-  border: none;
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
   padding: 12px 32px;
-  border-radius: 4px;
   min-width: 169px;
   height: 56px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-button:hover,
-.hero-button:focus {
-  background-color: #404bbf;
 }
 /* #endregion */
 .team-title,
@@ -348,7 +350,6 @@ img {
   background-color: #2e2f42;
   padding: 100px 0;
 }
-
 .footer .container {
   display: flex;
   align-items: baseline;
@@ -369,7 +370,11 @@ img {
   width: 264px;
   color: #ffffff;
 }
-.socials-footer-title {
+.socials-footer {
+  margin-right: 80px;
+}
+.socials-footer-title,
+.footer-form-title {
   color: #ffffff;
   letter-spacing: 0.02em;
   font-weight: 500;
@@ -399,4 +404,152 @@ img {
 .socials-icon-footer {
   fill: #f4f4fd;
 }
+
+.footer-form-wrap {
+  display: flex;
+  gap: 16px;
+}
+.footer-input {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  font-weight: 400;
+  line-height: 1.5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 8px 16px;
+}
+.footer-input::placeholder {
+  color: #ffffff;
+}
+.footer-input-icon {
+  fill: #ffffff;
+}
+.footer-button {
+  padding: 8px 24px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
 /* #endregion */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2e2f4266;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms ease-in-out;
+}
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal {
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  padding: 24px;
+  overflow-y: auto;
+}
+.modal-close-icon {
+  fill: #2e2f42;
+  text-align: right;
+}
+.modal-close-btn {
+  background-color: #e7e9fc;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 24px;
+  width: 24px;
+  display: flex;
+  justify-self: flex-end;
+  margin-bottom: 24px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+.modal-title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
+  text-align: center;
+}
+.modal-form-input {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.004em;
+  color: #8e8f99;
+  position: relative;
+}
+.modal-form-input input {
+  margin-bottom: 8px;
+}
+.modal-form-input input,
+.modal-form-input textarea {
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1em;
+  width: 360px;
+  height: 40px;
+  box-sizing: border-box;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+.modal-form-icon {
+  position: absolute;
+  top: 60%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+}
+.form-textarea textarea {
+  resize: none;
+  width: 360px;
+  height: 120px;
+  margin-bottom: 16px;
+  color: #2e2f4266;
+}
+.checkbox-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: nowrap;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  line-height: 14px;
+  color: #2e2f4266;
+  margin-bottom: 24px;
+}
+.checkbox-span {
+  text-decoration: underline;
+  color: #404bbf;
+}
+.modal-btn {
+  width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
