--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,9 @@ img {
 .subscribe-title {
   color: #ffffff;
   margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .subscribe-group {
   display: flex;
@@ -498,7 +501,7 @@ img {
 
 .close-btn:hover,
 .close-btn:focus {
-  background-color: var(--hover-color);
+  background-color: #404bbf;
   border: none;
 }
 
@@ -517,7 +520,7 @@ img {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--dark-color);
+  color: #2e2f42;
   margin-bottom: 16px;
 }
 
@@ -534,7 +537,7 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--label-color);
+  color: #8e8f99;
   display: block;
   margin-bottom: 4px;
 }
@@ -566,8 +569,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-field:focus + .input-icon {
-  fill: var(--primary-color);
+.input-field:focus {
+  fill: #4d5ae5;
 }
 
 .textarea-group {
@@ -591,7 +594,7 @@ img {
 }
 
 .textarea-field:focus {
-  border-color: var(--primary-color);
+  border-color: #4d5ae5;
 }
 
 .checkbox-group {
@@ -615,7 +618,7 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--label-color);
+  color: #8e8f99;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -635,18 +638,21 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-input:checked + .checkbox-label .checkbox-custom {
-  background-color: var(--hover-color);
+.checkbox-input:checked {
+  display: inline-flex;
+  background-color: #404bbf;
   border: none;
-  fill: var(--checkbox-bg);
+  fill: #f4f4fd;
 }
 
 .privacy-link {
   text-decoration: underline;
-  color: #404bbf;
+  color: #4d5ae5;
 }
+
 .submit-btn {
-  width: 169px;
+  display: block;
+  min-width: 169px;
   height: 56px;
   padding: 16px 32px;
   display: flex;
