--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,7 @@ img {
 }
 
 .input-icon {
+  fill: #4d5ae5;
   position: absolute;
   left: 16px;
   top: 50%;
@@ -569,7 +570,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-field:focus {
+.input-field:focus,
+.input-icon:focus {
   fill: #4d5ae5;
 }
 
@@ -639,7 +641,6 @@ img {
 }
 
 .checkbox-input:checked {
-  display: inline-flex;
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -655,8 +656,6 @@ img {
   min-width: 169px;
   height: 56px;
   padding: 16px 32px;
-  display: flex;
-  justify-content: center;
   margin: 0 auto;
 }
 /* #endregion */
