--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ img {
 }
 
 .input-icon {
-  fill: #4d5ae5;
+  fill: #2e2f42;
   position: absolute;
   left: 16px;
   top: 50%;
@@ -570,11 +570,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-field:focus,
 .input-icon:focus {
   fill: #4d5ae5;
+  border-color: #4d5ae5;
 }
 
+.input-field:focus {
+  fill: #4d5ae5;
+  border-color: #4d5ae5;
+}
 .textarea-group {
   margin-bottom: 16px;
 }
@@ -627,20 +631,20 @@ img {
 }
 
 .checkbox-custom {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-input:checked {
+.checkbox-input:checked + .checkbox-label .checkbox-custom {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
