--- a/css/style.css
+++ b/css/style.css
@@ -630,27 +630,31 @@ img {
 }
 
 .checkbox-custom {
-  width: 16px;
-  height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  vertical-align: middle;
 }
 
 .checkbox-input:checked + .checkbox-label .checkbox-custom {
   background-color: #404bbf;
   border: none;
-}
-
-.checkbox-input:checked + .checkbox-label .checkbox-icon {
   fill: #f4f4fd;
 }
+/* .checkbox-input:checked + .checkbox-label .checkbox-icon {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+} */
 
 .privacy-link {
   text-decoration: underline;
