--- a/css/style.css
+++ b/css/style.css
@@ -606,19 +606,6 @@ img {
   margin-bottom: 24px;
 }
 
-/* .checkbox-input.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-} */
-
 .checkbox-label {
   font-size: 12px;
   line-height: 1.17;
@@ -630,6 +617,7 @@ img {
 }
 
 .checkbox-custom {
+  fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -650,11 +638,6 @@ img {
   border: none;
   fill: #f4f4fd;
 }
-/* .checkbox-input:checked + .checkbox-label .checkbox-icon {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-} */
 
 .privacy-link {
   text-decoration: underline;
