Add checkmark icon to checkbox input for improved visual feedback

--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ img {
   justify-content: center;
   width: 16px;
   height: 16px;
-  /* margin-right: 8px; */
+  margin-right: 8px;
 }
 
 .checkbox-input:checked + .checkbox-label .checkbox-custom {
